# mcp-gemini

./: Makefile  README.md  main.py  pyproject.toml  server.py
