[project]
name = "mcp-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.8",
    "langfuse>=3.2.3",
    "llama-index>=0.13.1",
    "llama-index-llms-google-genai>=0.3.0",
    "loguru>=0.7.3",
    "openinference-instrumentation-llama-index>=4.3.4",
]
